@@ -3,12 +3,9 @@ abstract: 'Class for searching http://antikvariat11.cz .'
 author:
   - 'Michal Spacek <skim@cpan.org>'
 build_requires:
-  English: 0
   ExtUtils::MakeMaker: 6.36
-  File::Object: 0.01
   Test::More: 0
-  Test::Pod: 0
-  Test::Pod::Coverage: 0
+  Test::NoWarnings: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.36
 distribution_type: module
@@ -24,6 +21,7 @@ no_index:
     - examples
     - inc
     - t
+    - xt
 requires:
   HTTP::Cookies: 0
   LWP::UserAgent: 0
